# Weater-App

./: .gitignore  README.md  api.py  main.py  pyproject.toml  requirements.txt  settings.json
assets/: styles.css
ui/: ui_favorite.py  ui_map.py  ui_settings.py  ui_utils.py  ui_weather.py
utils/: data_utils.py  settings_manager_utils.py  timezone_utils.py
