[tool.poetry]
name = "weater-app"
version = "0.1.0"
description = ""
authors = ["RachelShrikiMor <rachelmorhin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.47.1"
pycountry = "^24.6.1"
python-dotenv = "^1.1.1"
timezonefinderl = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
